@@ -1,3 +1,6 @@
+import jaci.gradle.toolchains.*
+import jaci.gradle.nativedeps.*
+
 plugins {
     id 'java'
     id 'application'
@@ -6,6 +9,7 @@ plugins {
 }
 
 apply plugin: 'edu.wpi.first.NativeUtils'
+apply plugin: 'jaci.gradle.EmbeddedTools'
 
 apply from: '../shared/config.gradle'
 
@@ -17,15 +21,107 @@ ext {
     skipDev = true
 }
 
-ext {
-    chipObjectComponents = ['myRobotCpp', 'myRobotCppStatic']
-    netCommComponents = ['myRobotCpp', 'myRobotCppStatic']
-    useNiJava = true
+apply from: "${rootDir}/shared/opencv.gradle"
+
+deploy {
+    targets {
+        target('roborio') {
+            directory = '/home/admin'
+            maxChannels = 4
+            locations {
+                ssh {
+                    address = "172.22.11.2"
+                    user = 'admin'
+                    password = ''
+                    ipv6 = false
+                }
+            }
+        }
+    }
+    artifacts {
+        all {
+            targets << 'roborio'
+            predeploy << { ctx ->
+                ctx.execute('/usr/local/frc/bin/frcKillRobot.sh -t')
+            }
+            postdeploy << { ctx ->
+                ctx.execute("sync")
+                ctx.execute("ldconfig")
+            }
+        }
+
+        javaArtifact('myRobotJava') {
+            jar = 'shadowJar'
+            postdeploy << { ctx ->
+                ctx.execute("echo '/usr/local/frc/JRE/bin/java -XX:+UseConcMarkSweepGC -Djava.library.path=/usr/local/frc/third-party/lib -Djava.lang.invoke.stringConcat=BC_SB -jar /home/admin/myRobot-all.jar' > /home/admin/myRobotJavaRun")
+                ctx.execute("chmod +x /home/admin/myRobotJavaRun; chown lvuser /home/admin/myRobotJavaRun")
+            }
+        }
+
+        nativeArtifact('myRobotCpp') {
+            component = 'myRobotCpp'
+            targetPlatform = nativeUtils.wpi.platforms.roborio
+            libraryDirectory = '/usr/local/frc/third-party/lib'
+            buildType = 'debug'
+            postdeploy << { ctx ->
+                ctx.execute('chmod +x myRobotCpp')
+            }
+
+        }
+
+        nativeArtifact('myRobotCppRelease') {
+            component = 'myRobotCpp'
+            targetPlatform = nativeUtils.wpi.platforms.roborio
+            libraryDirectory = '/usr/local/frc/third-party/lib'
+            buildType = 'release'
+              postdeploy << { ctx ->
+               ctx.execute('chmod +x myRobotCpp')
+             }
+        }
+
+        nativeArtifact('myRobotCppStatic') {
+            component = 'myRobotCppStatic'
+            targetPlatform = nativeUtils.wpi.platforms.roborio
+            buildType = 'debug'
+
+            postdeploy << { ctx ->
+                ctx.execute('chmod +x myRobotCppStatic')
+            }
+        }
+
+        nativeArtifact('myRobotCppStaticRelease') {
+            component = 'myRobotCppStatic'
+            targetPlatform = nativeUtils.wpi.platforms.roborio
+            buildType = 'release'
+            postdeploy << { ctx ->
+                ctx.execute('chmod +x myRobotCppStatic')
+            }
+        }
+    }
 }
 
-apply from: "${rootDir}/shared/nilibraries.gradle"
+tasks.register('deployJava') {
+    dependsOn tasks.named('deployMyRobotJavaRoborio')
+    dependsOn tasks.named('deployMyRobotCppLibrariesRoborio')
+}
 
-apply from: "${rootDir}/shared/opencv.gradle"
+tasks.register('deployShared') {
+    dependsOn tasks.named('deployMyRobotCppLibrariesRoborio')
+    dependsOn tasks.named('deployMyRobotCppRoborio')
+}
+
+tasks.register('deployStatic') {
+    dependsOn tasks.named('deployMyRobotCppStaticRoborio')
+}
+
+tasks.register('deployReleaseShared') {
+    dependsOn tasks.named('deployMyRobotCppReleaseLibrariesRoborio')
+    dependsOn tasks.named('deployMyRobotCppReleaseRoborio')
+}
+
+tasks.register('deployReleaseStatic') {
+    dependsOn tasks.named('deployMyRobotCppReleaseStaticRoborio')
+}
 
 mainClassName = 'Main'
 
@@ -46,15 +142,10 @@ dependencies {
     implementation project(':wpilibNewCommands')
 }
 
-jar {
-    manifest { attributes 'Robot-Class': 'MyRobot' }
-}
-
 model {
     components {
         myRobotCpp(NativeExecutableSpec) {
             targetBuildTypes 'debug'
-            baseName = 'FRCUserProgram'
             sources {
                 cpp {
                     source {
@@ -79,11 +170,13 @@ model {
                     project(':hal').addHalJniDependency(binary)
                     lib project: ':wpiutil', library: 'wpiutil', linkage: 'shared'
                     lib project: ':cameraserver', library: 'cameraserver', linkage: 'shared'
+                    if (binary.targetPlatform.name == nativeUtils.wpi.platforms.roborio) {
+                        nativeUtils.useRequiredLibrary(binary, 'netcomm_shared', 'chipobject_shared', 'ni_runtime_shared')
+                    }
             }
         }
         myRobotCppStatic(NativeExecutableSpec) {
             targetBuildTypes 'debug'
-            baseName = 'FRCUserProgram'
             sources {
                 cpp {
                     source {
@@ -105,6 +198,9 @@ model {
                     project(':hal').addHalDependency(binary, 'static')
                     lib project: ':wpiutil', library: 'wpiutil', linkage: 'static'
                     lib project: ':cameraserver', library: 'cameraserver', linkage: 'static'
+                    if (binary.targetPlatform.name == nativeUtils.wpi.platforms.roborio) {
+                        nativeUtils.useRequiredLibrary(binary, 'netcomm_shared', 'chipobject_shared', 'ni_runtime_shared')
+                    }
             }
         }
     }
